# C_ChatRoom

./: Doxyfile  README.md
client/: Makefile.am  configure.ac
client/include/: client.h  commands.h  common.h  file_transfer_client.h  group.h  sendrecv.h
client/src/: client.c  commands.c  common.c  file_transfer_client.c  group.c  main.c  sendrecv.c
client/src/.deps/: client.Po  commands.Po  common.Po  crc32.Po  file_transfer_client.Po  group.Po  main.Po  sendrecv.Po  video.Po
